[tool.poetry]
name = "stormsnstocks"
version = "0.1.0"
description = ""
authors = ["Yuxuan1998 <hanyuxuan19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
ipykernel = "^6.29.3"
requests = "^2.31.0"
nltk = "^3.8.1"
backoff = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
